[AnimationWorklet] Properly setup and teardown the backing thread

This CL adds refcounting around the backing thread for AnimationWorklet,
such that the backing thread is actually torn down when all
AnimationWorkletThread objects are destroyed.

Bug: 892527
Change-Id: I750b63c74146a4a4dc7b3b1ebda0e66b269b13dc
Reviewed-on: https://chromium-review.googlesource.com/c/1286772
Reviewed-by: Ian Kilpatrick <ikilpatrick@chromium.org>
Reviewed-by: Majid Valipour <majidvp@chromium.org>
Reviewed-by: Yi Gu <yigu@chromium.org>
Commit-Queue: Stephen McGruer <smcgruer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600842}
Former-commit-id: c5c01f7ed3136f9d143f43dc46dc2131abc23fe7